test/zinc_source/compile_errors/collections/04_empty_dict_no_inference.zn
// expected-error: cannot infer type

fn main() {
    a = dict()
}
